# insight-io

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  demo_command.md
backend/: CMakeLists.txt
backend/include/insightio/backend/: app_service.hpp  catalog.hpp  discovery.hpp  ipc.hpp  rest_server.hpp  result.hpp  runtime_paths.hpp  schema_store.hpp  session_service.hpp  types.hpp  unix_socket.hpp  version.hpp
backend/include/insightos/backend/: catalog.hpp  channel_registry.hpp  device_store.hpp  discovery.hpp  ipc.hpp  ipc_control_server.hpp  request_support.hpp  rest_server.hpp  result.hpp  runtime_paths.hpp  session.hpp  session_contract.hpp  types.hpp  unix_socket.hpp  uri.hpp  version.hpp  worker.hpp
backend/schema/: 001_initial.sql
backend/src/: app_service.cpp  catalog.cpp  device_store.cpp  main.cpp  request_support.cpp  schema_store.cpp  session_manager.cpp  session_service.cpp  types.cpp  uri.cpp
backend/src/api/: rest_server.cpp
backend/src/discovery/: discovery.cpp  orbbec_discovery.cpp  pipewire_discovery.cpp  v4l2_discovery.cpp
backend/src/ipc/: channel_registry.cpp  control_server.cpp  ipc.cpp  unix_socket.cpp
backend/src/publication/: rtsp_publisher.cpp  rtsp_publisher.hpp
backend/src/workers/: orbbec_worker.cpp  orbbec_worker.hpp  pipewire_worker.cpp  pipewire_worker.hpp  synthetic_worker.cpp  synthetic_worker.hpp  v4l2_worker.cpp  v4l2_worker.hpp  worker.hpp
backend/tests/: app_service_test.cpp  catalog_service_test.cpp  catalog_test.cpp  device_store_test.cpp  discovery_test.cpp  ipc_runtime_test.cpp  request_support_test.cpp  rest_server_test.cpp  schema_store_test.cpp  session_service_test.cpp
backend/tools/: ipc_probe.cpp
docs/: README.md  REST.md  USER_GUIDE.md  past-tasks.md
docs/design_doc/: GROUPED_SOURCE_SELECTION_WRITEUP.md  INTENT_ROUTING_ARCHITECTURE.md  INTENT_ROUTING_DATA_MODEL.md  POST_CAPTURE_PUBLICATION_PHASE_WRITEUP.md  RTSP_PUBLICATION_REUSE_WRITEUP.md  RUNTIME_WAIT_BEHAVIOR_WRITEUP.md  TECH_REPORT.md
docs/diagram/: app-route-source-sequence.md  bootstrap-health-sequence.md  browser-restart-recovery-sequence.md  browser-route-builder-sequence.md  catalog-discovery-sequence.md  developer-control-surface-sequence.md  direct-session-sequence.md  discovery-runtime-boundary-sequence.md  exact-rtsp-publication-sequence.md  exact-session-attach-sequence.md  grouped-route-delete-sequence.md  grouped-session-attach-sequence.md  intent-routing-er.md  intent-routing-runtime.md  ipc-idle-teardown-sequence.md  sdk-idle-rest-bind-sequence.md  shared-serving-runtime-sequence.md
docs/features/: INTERACTION_CONTEXT.md  fullstack-intent-routing-e2e.json  runtime-and-app-user-journeys.json
docs/prd/: fullstack-intent-routing-prd.md
docs/tasks/: fullstack-intent-routing-task-list.md  task-7-runtime-hardening-plan.md  task-8-rtsp-publication-plan.md
examples/: CMakeLists.txt  mixed_device_consumer.cpp  orbbec_depth_overlay.cpp  pipewire_audio_monitor.cpp  v4l2_latency_monitor.cpp
frontend/: README.md  app.js  index.html  style.css
sdk/: CMakeLists.txt
sdk/include/insightos/: app.hpp
sdk/src/: app.cpp
sdk/tests/: app_sdk_test.cpp
